<resources>
    <string name="app_name">Feel Beat</string>
    <string name="service_description">This is a service for playing music on background. If you stopped it may be the music is stopped!</string>
    <string name="empty_text">No Item Found</string>
    <string name="all_songs">ALL SONGS</string>
    <string name="all_albums">ALL ALBUMS</string>

    <!--format string-->
    <string name="format_num_of_song">%d songs</string>
    <string name="format_info_artist">%1$d songs | %2$d albums</string>
    <string name="format_time_song_1">%1$d:%2$02d</string>
    <string name="format_time_song_2">%1$02d:%2$02d:%3$02d</string>
    <string name="format_time_detail_album">%1$d songs - %2$04d </string>

    <!--main_menu_icon_title-->
    <string name="item_menu_overflow">Menu</string>
    <string name="item_search">Search</string>
    <string name="item_sort">Sort By</string>
    <string name="item_settings">Settings</string>
    <string name="item_sort_az">A-Z</string>
    <string name="item_sort_za">Z-A</string>

    <!--search view-->
    <string name="search_view_hint">Search songs, artists or albums</string>
    <string name="search_nothing_found">NOTHING FOUND</string>

    <!--permission request-->
    <string name="title_dialog_explanation">Request Permission</string>
    <string name="title_negative_btn">Ignore</string>
    <string name="title_positive_btn">Accept</string>
    <string name="explaining_read_permission">The application needs some permission to normal work</string>

    <!--activity now playing-->
    <string name="title_now_playing">Now Playing</string>
</resources>
